--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,8 @@ Description: More about what it does (maybe more than one line)
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
+Depends: 
+    R (>= 3.5)
 Imports:
-    dplyr,mvtnorm,clinfun
+    dplyr,clinfun
 RoxygenNote: 7.0.2.9000
